--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Osmose</title>
+		Osmose
 		<meta charset="utf-8"/>
 	</head>
 	<div> <!-- Conteúdo em si -->
@@ -25,12 +25,21 @@
 					as concentrações.
 			</p>
 			<center>
-			<img src="https://static.biologianet.com/conteudo/images/2014/12/osmose(1).jpg" alt="Figura que apresenta a movimentação do solvente">
+				<img src="https://static.biologianet.com/conteudo/images/2014/12/osmose(1).jpg" alt="Figura que apresenta a movimentação do solvente">
 			</center>
 			<p>
-					Quem "empurra" o solvente pela membrana semipermeável é a chamada pressão osmótica
+					Quem "empurra" o solvente pela membrana semipermeável é a chamada pressão osmótica.	A pressão osmótica é a pressão que atua sobre a solução de maior concentração.
+					 Essa pressão, representada pelo símbolbo pi.
 			</p>
-
+			<center>
+				<img src="https://s3.static.brasilescola.uol.com.br/img/2019/09/mrt(1).jpg">
+			</center>
+			<p>
+				Onde:
+					M =  concentração em mol/L<br />
+					R = constante universal dos gases perfeitos<br />
+					T = temperatura absoluta, em K<br />
+			</p>
 			<!--
 			<img src="https://lh3.googleusercontent.com/pw/AM-JKLUPul1ZwtUF85GkmiqeqlAFL6KY99m_1eBCzUGVlNkQLQX4qij2tP4EhSHkMMAj4CXPqMDJh3deAV9fV2pXcqV2lh9Yx8NxoKA42FJ2dSd_uJhxGtsZV3MK28HQBvSI-U9g5JA06eKxczrGDwRytpC8rQ=w1330-h748-no?authuser=0" alt="A photo of Hugo" width=30%>
 			-->
